--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,8 @@ html {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
   color: var(--color-text);
   background-color: var(--color-background-900);
@@ -57,7 +57,9 @@ body {
   overflow: scroll;
   position: relative;
 }
-
+::-webkit-scrollbar {
+  width: 0px;
+}
 .loader {
   text-align: center;
   text-transform: uppercase;
@@ -163,7 +165,8 @@ body {
   transition: all 0.3s;
 }
 
-.list.list-movies li:hover {
+.list.list-movies li:hover,
+.list.list-movies .selected {
   background-color: var(--color-background-100);
 }
 
@@ -281,13 +284,13 @@ body {
 }
 
 .rating {
+  display: flex;
+  flex-direction: column;
   background-color: var(--color-background-100);
   border-radius: 0.9rem;
   padding: 2rem 2.4rem;
   margin-bottom: 0.8rem;
   font-weight: 600;
-  display: flex;
-  flex-direction: column;
   gap: 2.4rem;
 }
 
